# repeated_play

./: .gitignore  LICENSE  README.md  installation.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/repeated_play/: __init__.py  main.py
src/repeated_play/stationary/: __init__.py  methods.py
src/repeated_play/transition_matrices/: __init__.py  matrices.py
src/stationary/: main.py
src/stationary/methods/: __init__.py  methods.py
src/stationary/repeated_games/: transition_matrices.py
tests/: test_main.py  test_methods.py  test_stationary.py  test_transition_matrices.py  test_version.py
